# screenpy_adapter_allure

./: .pre-commit-config.yaml  HISTORY.md  README.md  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: lint.yml  publish.yml
docs/: conf.py  cookbook.rst  index.rst  rtd-requirements.txt
screenpy_adapter_allure/: __init__.py  __version__.py  adapters.py
tests/: conftest.py  test__version__.py  test_adapter.py  test_copyright.py  test_namespace.py  test_narration_integration.py
